@@ -1,8 +1,8 @@
 package ar.edu.utn.frba.dds.donatrack.donaciones.web.controller;
 
+import ar.edu.utn.frba.dds.donatrack.donaciones.dominio.beneficiario.Beneficiario;
 import ar.edu.utn.frba.dds.donatrack.donaciones.dominio.donante.Donante;
 import ar.edu.utn.frba.dds.donatrack.donaciones.dominio.donante.TipoDonante;
-import ar.edu.utn.frba.dds.donatrack.donaciones.dominio.generadorrankings.EstadoRanking;
 import ar.edu.utn.frba.dds.donatrack.donaciones.web.convers.DonanteMapper;
 import ar.edu.utn.frba.dds.donatrack.donaciones.web.dto.donante.DonanteRequest;
 import ar.edu.utn.frba.dds.donatrack.donaciones.persistencia.DonanteRepository;
@@ -22,8 +22,11 @@ public class DonanteController {
 
   public void crear(Context ctx) {
     try {
-      DonanteRequest request = ctx.bodyAsClass(DonanteRequest.class);
-      Donante donante = DonanteMapper.aDominio(request);
+      //Cosas que recibo por Body
+      DonanteRequest donanteDto = ctx.bodyAsClass(DonanteRequest.class);
+
+      Donante donante = DonanteMapper.aDominio(donanteDto);
+
       repoDonantes.guardar(donante);
       ctx.status(201).json(DonanteMapper.aDto(donante));
     } catch (JsonSyntaxException e) {
@@ -38,10 +41,12 @@ public class DonanteController {
 
   public void obtenerTodos(Context ctx) {
     try {
-      TipoDonante tipo = aTipoDonante(ctx.queryParam("tipo"));
-      List<Donante> donantes = (tipo == null)
-          ? repoDonantes.buscarTodos()
-          : repoDonantes.buscarPorTipo(tipo);
+      //Cosas que recibo por URL --> Query param
+      String tipo = ctx.queryParam("tipo");
+
+      TipoDonante tipoDonante = aTipoDonante(tipo);
+
+      List<Donante> donantes = (tipoDonante == null) ? repoDonantes.buscarTodos() : repoDonantes.buscarPorTipo(tipoDonante);
       ctx.json(donantes.stream().map(DonanteMapper::aDtoResumen).toList());
     } catch (DomainValidationException e) {
       ctx.status(400).json(new ErrorResponse(400, e.getMessage()));
@@ -53,9 +58,10 @@ public class DonanteController {
 
   public void obtener(Context ctx) {
     try {
+      //Cosas que recibo por URL --> Path param
       String idDonante = ctx.pathParam("id");
-      Donante donante = repoDonantes.buscarPorId(idDonante);
-      if (donante == null) throw new RecursoNoEncontradoException("El donante: " + idDonante + " no existe");
+
+      Donante donante = buscarDonantePorId(idDonante);
 
       ctx.json(DonanteMapper.aDto(donante));
     } catch (RecursoNoEncontradoException e) {
@@ -68,11 +74,13 @@ public class DonanteController {
 
   public void actualizar(Context ctx) {
     try {
+      //Cosas que recibo por URL --> Path param
       String idDonante = ctx.pathParam("id");
-      Donante donante = repoDonantes.buscarPorId(idDonante);
-      if (donante == null) throw new RecursoNoEncontradoException("No se encontró el donante con id: " + idDonante);
-      DonanteRequest request = ctx.bodyAsClass(DonanteRequest.class);
-      DonanteMapper.actualizar(donante, request);
+      //Cosas que recibo por Body
+      DonanteRequest donanteDto = ctx.bodyAsClass(DonanteRequest.class);
+
+      Donante donante = buscarDonantePorId(idDonante);
+      DonanteMapper.actualizarDominio(donante, donanteDto);
 
       repoDonantes.actualizar(donante);
       ctx.json(DonanteMapper.aDto(donante));
@@ -90,9 +98,11 @@ public class DonanteController {
 
   public void eliminar(Context ctx) {
     try {
+      //Cosas que recibo por URL --> Path param
       String idDonante = ctx.pathParam("id");
-      Donante donante = repoDonantes.buscarPorId(idDonante);
-      if (donante == null) throw new RecursoNoEncontradoException("No se encontró el donante con id: " + idDonante);
+
+      Donante donante = buscarDonantePorId(idDonante);
+
       repoDonantes.eliminar(idDonante);
       ctx.status(204);
     } catch (RecursoNoEncontradoException e) {
@@ -104,12 +114,19 @@ public class DonanteController {
   }
 
   private TipoDonante aTipoDonante(String tipo) {
-    if (tipo == null || tipo.trim().isEmpty()) return null;
+    if (tipo == null || tipo.isBlank()) return null;
     try {
       return TipoDonante.valueOf(tipo.toUpperCase());
     } catch (IllegalArgumentException e) {
       throw new DomainValidationException("El tipo: " + tipo + " no existe");
     }
+  }
+
+  //================= FUNCIONES AUXILIARES ========================
+  private Donante buscarDonantePorId(String id) {
+    Donante donante = repoDonantes.buscarPorId(id);
+    if (donante == null) throw new RecursoNoEncontradoException("No existe donante: " + id);
+    return donante;
   }
 
 }
